--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
         rel="stylesheet" type="text/css" />
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-    <link href="" rel="shortcut icon" type="image/x-icon" />
-    <link href="" rel="apple-touch-icon" />
+        <link href="/images/logoblack.png" rel="shortcut icon" type="image/x-icon" />
+        <link href="/images/logoblack.png" rel="apple-touch-icon" />
 </head>
 
 <body>
