--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     src="/images/logowhite.png" loading="lazy" width="35" alt="White Logo" class="image-7" /><img
                     src="/images/logoblack.png" loading="lazy" width="35"
                     data-w-id="1d974316-5ac7-19c6-3cbe-8689f4713c0d" alt="Logo" class="image-5" /></a>
-            <div class="nav_link_wrapper"><a href="/index.html" class="nav-pop">Rólunk</a><a href="#"
+            <div class="nav_link_wrapper"><a href="/index.html" class="nav-pop">Rólunk</a><a href="/projects.html"
                     class="nav-pop">Munkáink</a><a href="/contact.html" class="link-block w-inline-block">
                     <div class="nav_link_last last">Kapcsolat</div>
                 </a></div>
@@ -319,7 +319,7 @@
                     data-renderer="svg" data-default-duration="2.875" data-duration="0"><img
                         src="/images/burgermenublack.svg" loading="lazy" width="40" alt="Black Burger Menu" /></div>
             </a>
-            <div class="nav_link_wrapper"><a href="/index.html" class="nav-pop">Rólunk</a><a href="#"
+            <div class="nav_link_wrapper"><a href="/index.html" class="nav-pop">Rólunk</a><a href="/projects.html"
                     class="nav-pop">Munkáink</a><a href="/contact.html" class="link-block w-inline-block">
                     <div class="nav_link_last last">Kapcsolat</div>
                 </a></div>
@@ -590,11 +590,11 @@
                                 href="/index.html" class="f-footer-link w-inline-block">
                                 <div class="nav-pop white">Rólunk</div>
                             </a>
-                            <div class="f-footer-vertical-divider"></div><a href="#"
+                            <div class="f-footer-vertical-divider"></div><a href="/projects.html"
                                 class="f-footer-link w-inline-block">
                                 <div class="nav-pop white">Munkáink</div>
                             </a>
-                            <div class="f-footer-vertical-divider"></div><a href="#"
+                            <div class="f-footer-vertical-divider"></div><a href="/contact.html"
                                 class="f-footer-link w-inline-block">
                                 <div class="nav-pop white">Kapcsolat</div>
                             </a>
