munkaink-page-mod

--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
     iconUrl: '/images/map-marker.png', // Your custom icon URL
     iconSize: [50, 50],  // Icon size in pixels
     iconAnchor: [40, 50], // Point where the icon anchors on the map
-    popupAnchor: [13, -50] // Where the popup appears relative to the icon
+    popupAnchor: [-15, -50] // Where the popup appears relative to the icon
 });
 
 L.marker([47.2305, 16.6218], { icon: customIcon }).addTo(map)
@@ -111,7 +111,7 @@ L.marker([47.2305, 16.6218], { icon: customIcon }).addTo(map)
                             src="/images/logowhite.png"
                             loading="lazy" width="43" alt="" class="f-footer-logo-xs" /></a>
                     <div class="f-footer-line"></div>
-                    <p class="f-footer-detail">Copyright ©2023 - Minden jog fenntartva - ghostproductions.com</p>
+                    <p class="f-footer-detail">Copyright ©2023 - Minden jog fenntartva</p>
                 </div>
                 <div class="f-footer-group">
                     <div id="w-node-_0d39563b-8ae0-c407-d08f-0540ee8868bd-bf511cab" class="f-footer-menu"><a href="/index.html"
