--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <div class="sub-heading black smaller">Keress minket bizalommal!</div>
             <div class="contact-wrapper">
                 <div class="heading-4 whithe-bg bigger">Tel.: +36 30 959 0551<br /></div>
-                <div class="heading-4 whithe-bg bigger">Email: ghostprod@gmail.com</div>
+                <div class="heading-4 whithe-bg bigger">Email: voros.gabor@hallgato.sze.hu</div>
             </div>
             <div class="modal-button-wrapper"><a href="tel:+36309590551" class="button-round-blue w-button">Hívás</a><a
                     href="mailto:ghostprod@gmail.com?subject=Aj%C3%A1nlatk%C3%A9r%C3%A9s"
