--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-
-<html data-wf-domain="" data-wf-page="63cdbe8d433147babf511cab"
+<!-- This site was created in Webflow. https://webflow.com --><!-- Last Published: Wed Feb 12 2025 22:57:26 GMT+0000 (Coordinated Universal Time) -->
+<html data-wf-domain="ghost01-ce8ffb331ffee726c06f798367c71df.webflow.io" data-wf-page="63cdbe8d433147babf511cab"
     data-wf-site="63cdbe8d4331477b93511ca7" data-wf-status="1">
 
 <head>
     <meta charset="utf-8" />
-    <title>Ghostlabs</title>
+    <title>Egyedi weboldal fejlesztés Szombathely | Ghostlabs Prémium Weboldalak</title>
     <meta content="Contact" property="og:title" />
     <meta content="Contact" property="twitter:title" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -13,110 +13,24 @@
     <link
         href="/styles.css"
         rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+    <style>
+        @media (min-width:992px) {
+            html.w-mod-js:not(.w-mod-ix) [data-w-id="e8787575-b059-76c7-46de-50bd21f07fa7"] {
+                height: 92%;
+            }
+        }
+    </style>
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-        <link href="/images/logoblack.png" rel="shortcut icon" type="image/x-icon" />
-        <link href="/images/logoblack.png" rel="apple-touch-icon" />
+    <link href="https://cdn.prod.website-files.com/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="https://cdn.prod.website-files.com/img/webclip.png" rel="apple-touch-icon" />
 </head>
 
 <body>
-    <nav class="nav_mobile"><a href="/" class="link-block-2 w-inline-block"><img
-                src="/images/logowhite.png"
-                loading="lazy" width="35" alt="Logo" class="image-5" /></a><a
-            data-w-id="05737f68-2d10-03f4-444c-23d450bcb996" href="#" class="lottie-wrapper w-inline-block">
-            <div class="lottie-white" data-w-id="05737f68-2d10-03f4-444c-23d450bcb997"><img
-                src="/images/burgermenuwhite.svg"
-                loading="lazy" width="35" alt="Black Burger Menu"/></div>
-        </a>
-        <div class="nav_link_wrapper"><a href="/index.html" class="nav-pop">Rólunk</a><a href="#" class="nav-pop">Munkáink</a><a
-                href="/contact.html" aria-current="page" class="link-block w-inline-block w--current">
-                <div class="nav_link_last last">Kapcsolat</div>
-            </a></div>
-    </nav>
-    <div class="projects-hero">
-        <div class="container-projects">
-            <div class="title-wrapper">
-                <h2 data-w-id="5d0500e7-e01e-837a-f475-b5d51d71f9d7"
-                    style="-webkit-transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
-                    class="title black">Munkáink</h2>
-            </div>
-            <div class="project-grid">
-                <a href="project1.html" class="project-card">
-                  <div class="card-upper" style="background-image: url('https://via.placeholder.com/600x400');"></div>
-                  <div class="card-lower">
-                    <h3>Projekt 1</h3>
-                    <p>Egy rövid leírása a projektnek</p>
-                  </div>
-                </a>
-                <!-- Repeat for additional cards -->
-                <a href="project1.html" class="project-card">
-                    <div class="card-upper" style="background-image: url('https://via.placeholder.com/600x400');"></div>
-                    <div class="card-lower">
-                      <h3>Projekt 2</h3>
-                      <p>Egy rövid leírása a projektnek</p>
-                    </div>
-                  </a>
-
-                  <a href="project1.html" class="project-card">
-                    <div class="card-upper" style="background-image: url('https://via.placeholder.com/600x400');"></div>
-                    <div class="card-lower">
-                      <h3>Projekt 3</h3>
-                      <p>Egy rövid leírása a projektnek</p>
-                    </div>
-                  </a>
-
-                  <a href="project1.html" class="project-card">
-                    <div class="card-upper" style="background-image: url('https://via.placeholder.com/600x400');"></div>
-                    <div class="card-lower">
-                      <h3>Projekt 4</h3>
-                      <p>Egy rövid leírása a projektnek</p>
-                    </div>
-                  </a>
-
-        </div>
-
-    </div>
-    <div class="f-footer-small">
-        <div class="f-container-large">
-            <div class="f-footer-bottom">
-                <div class="f-footer-brand"><a href="/" class="f-footer-logo-mark w-inline-block"><img
-                            src="/images/logowhite.png"
-                            loading="lazy" width="43" alt="" class="f-footer-logo-xs" /></a>
-                    <div class="f-footer-line"></div>
-                    <p class="f-footer-detail">Copyright ©2023 - Minden jog fenntartva - ghostproductions.com</p>
-                </div>
-                <div class="f-footer-group">
-                    <div id="w-node-_0d39563b-8ae0-c407-d08f-0540ee8868bd-bf511cab" class="f-footer-menu"><a href="/index.html"
-                            class="f-footer-link w-inline-block">
-                            <div class="nav-pop white">Rólunk</div>
-                        </a>
-                        <div class="f-footer-vertical-divider"></div><a href="#" class="f-footer-link w-inline-block">
-                            <div class="nav-pop white">Munkáink</div>
-                        </a>
-                        <div class="f-footer-vertical-divider"></div><a href="#" class="f-footer-link w-inline-block">
-                            <div class="nav-pop white">Kapcsolat</div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    
-    <nav class="nav-contact"><a href="/" class="link-block-2 w-inline-block"><img
-                src="/images/logowhite.png"
-                loading="lazy" width="35" alt="White Logo" class="image-7" /><img
-                src="/images/logowhite.png"
-                loading="lazy" width="35" alt="Logo" class="image-5" /></a>
-        <div class="nav_link_wrapper"><a href="/index.html" class="nav-pop">Rólunk</a><a href="#" class="nav-pop">Munkáink</a><a
-                href="contact.html" aria-current="page" class="link-block w-inline-block w--current">
-                <div class="nav_link_last last">Kapcsolat</div>
-            </a></div>
-    </nav>
     <div style="-webkit-transform:translate3d(0, -800px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -800px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -800px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -800px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);display:none"
         class="navbar-popup">
-        <div class="navbar-popup-links"><a href="/index.html" class="nav-popup-link">Rólunk</a><a href="#"
-                class="nav-popup-link">Munkáink</a><a href="contact.html" aria-current="page"
+        <div class="navbar-popup-links"><a href="/" class="nav-popup-link">Rólunk</a><a href="#"
+                class="nav-popup-link">Munkáink</a><a href="/munkaink" aria-current="page"
                 class="link-block w-inline-block w--current">
                 <div class="nav-popup-link">Kapcsolat</div>
             </a><img
@@ -124,10 +38,141 @@
                 loading="lazy" alt="close tab icon" data-w-id="719cb52d-d8f2-83ee-1e04-d7e08d966eab"
                 class="navbar-popup-close-btn" /></div>
     </div>
-    <script src="/script3.js"
+    <div style="display:none;opacity:0" class="pop_up_overlay"></div>
+    <div style="display:none;opacity:0;-webkit-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -100%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
+        class="pop_up">
+        <div class="card_popup">
+            <div class="sub-heading black smaller">Keress minket bizalommal!</div>
+            <div class="contact-wrapper">
+                <div class="heading-4 whithe-bg bigger">Tel.: 06/30 959 0551<br /></div>
+                <div class="heading-4 whithe-bg bigger">Email: voros.gabor@hallgato.sze.hu</div>
+            </div>
+            <div class="modal-button-wrapper"><a href="tel:+36309590551" class="button-round-blue w-button">Hívás</a><a
+                    href="mailto:ghostprod@gmail.com?subject=Aj%C3%A1nlatk%C3%A9r%C3%A9s"
+                    class="button-round-light-blue w-button">Email</a></div><a
+                data-w-id="139fe72d-1928-7462-9075-57b30e8c0a9f" href="#" class="card-close-link w-inline-block"><img
+                    src="/images/close.svg"
+                    loading="lazy" alt="" /></a>
+        </div>
+    </div>
+    <nav class="nav-contact"><a href="/" class="link-block-2 w-inline-block"><img
+        src="/images/logowhite.png"
+        loading="lazy" width="35" alt="White Logo" class="image-7" /><img
+        src="/images/logowhite.png"
+        loading="lazy" width="35" alt="Logo" class="image-5" /></a>
+<div class="nav_link_wrapper"><a href="/index.html" class="nav-pop">Rólunk</a><a href="/projects.html" class="nav-pop">Munkáink</a><a
+        href="contact.html" aria-current="page" class="link-block w-inline-block w--current">
+        <div class="nav_link_last last">Kapcsolat</div>
+    </a></div>
+</nav>
+<nav class="nav_mobile"><a href="/" class="link-block-2 w-inline-block"><img
+    src="/images/logowhite.png"
+    loading="lazy" width="35" alt="Logo" class="image-5" /></a><a
+data-w-id="05737f68-2d10-03f4-444c-23d450bcb996" href="#" class="lottie-wrapper w-inline-block">
+<div class="lottie-white" data-w-id="05737f68-2d10-03f4-444c-23d450bcb997"><img
+    src="/images/burgermenuwhite.svg"
+    loading="lazy" width="35" alt="Black Burger Menu"/></div>
+</a>
+<div class="nav_link_wrapper"><a href="/index.html" class="nav-pop">Rólunk</a><a href="/projects.html" class="nav-pop">Munkáink</a><a
+    href="/contact.html" aria-current="page" class="link-block w-inline-block w--current">
+    <div class="nav_link_last last">Kapcsolat</div>
+</a></div>
+</nav>
+    <div id="w-node-_5b9089b5-00f2-a2b8-5ba7-5850655accd9-bf511cab" class="div-block-5">
+        <div class="content-wrapper">
+            <div class="section-projects hero">
+                <div class="container-projects">
+                    <div class="title-wrapper">
+                        <h1 data-w-id="5d0500e7-e01e-837a-f475-b5d51d71f9d7"
+                            style="-webkit-transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
+                            class="title black">Munkáink</h1>
+                    </div>
+                    <div class="sub-wrapper">
+                        <h1 data-w-id="5d0500e7-e01e-837a-f475-b5d51d71f9da"
+                            style="-webkit-transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
+                            class="heading-2 grey">Dolgozzunk együtt! Örömmel állok a rendelkezésedre amennyiben
+                            kérdésed van, legyen az egyszerű információkérés vagy üzleti megkeresés.</h1>
+                    </div>
+                    <div class="button-wrapper"><a data-w-id="5d0500e7-e01e-837a-f475-b5d51d71f9dd"
+                            style="-webkit-transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 120%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
+                            href="#" class="cta white-bg w-button">Kérj ajánlatot</a></div>
+                </div>
+            </div>
+            <section class="grid-wrapper">
+                <div class="w-layout-grid grid"><a id="w-node-e8787575-b059-76c7-46de-50bd21f07fa3-bf511cab"
+                        data-w-id="e8787575-b059-76c7-46de-50bd21f07fa3" href="#"
+                        class="projects_card_wrapper w-inline-block">
+                        <div class="projects-card-behind">
+                            <p class="roadmap_card_paragraph">A projektről egy rövid leírás</p>
+                        </div>
+                        <div data-w-id="e8787575-b059-76c7-46de-50bd21f07fa7" class="projects-card_top"></div>
+                        <div class="projects-card_top overlay">
+                            <h3 class="projects-title white">Projekt 1</h3>
+                        </div>
+                    </a><a id="w-node-_38ca39ce-43c3-e3b4-7e1f-c8f8e9b46b3a-bf511cab"
+                        data-w-id="38ca39ce-43c3-e3b4-7e1f-c8f8e9b46b3a" href="#"
+                        class="projects_card_wrapper w-inline-block">
+                        <div class="projects-card-behind">
+                            <p class="roadmap_card_paragraph">A projektről egy rövid leírás</p>
+                        </div>
+                        <div class="projects-card_top project2"></div>
+                        <div class="projects-card_top overlay">
+                            <h3 class="projects-title white">Projekt 2</h3>
+                        </div>
+                    </a><a id="w-node-_7a06221f-2871-5019-689d-a23b3fe29884-bf511cab"
+                        data-w-id="7a06221f-2871-5019-689d-a23b3fe29884" href="#"
+                        class="projects_card_wrapper w-inline-block">
+                        <div class="projects-card-behind">
+                            <p class="roadmap_card_paragraph">A projektről egy rövid leírás</p>
+                        </div>
+                        <div class="projects-card_top project3"></div>
+                        <div class="projects-card_top overlay">
+                            <h3 class="projects-title white">Projekt 3</h3>
+                        </div>
+                    </a><a id="w-node-_623c3149-2f51-1783-0691-85ae444f8894-bf511cab"
+                        data-w-id="623c3149-2f51-1783-0691-85ae444f8894" href="#"
+                        class="projects_card_wrapper w-inline-block">
+                        <div class="projects-card-behind">
+                            <p class="roadmap_card_paragraph">A projektről egy rövid leírás</p>
+                        </div>
+                        <div class="projects-card_top project4"></div>
+                        <div class="projects-card_top overlay">
+                            <h3 class="projects-title white">Projekt 4</h3>
+                        </div>
+                    </a></div>
+            </section>
+        </div>
+        <div class="f-footer-small footer-margin">
+            <div class="f-container-large">
+                <div class="f-footer-bottom">
+                    <div class="f-footer-brand"><a href="/" class="f-footer-logo-mark w-inline-block"><img
+                                src="/images/logowhite.png"
+                                loading="lazy" width="43" alt="" class="f-footer-logo-xs" /></a>
+                        <div class="f-footer-line"></div>
+                        <p class="f-footer-detail">Copyright ©2023 - Minden jog fenntartva </p>
+                    </div>
+                    <div class="f-footer-group">
+                        <div id="w-node-_0d39563b-8ae0-c407-d08f-0540ee8868bd-bf511cab" class="f-footer-menu"><a
+                                href="/index.html" class="f-footer-link w-inline-block">
+                                <div class="nav-pop white">Rólunk</div>
+                            </a>
+                            <div class="f-footer-vertical-divider"></div><a href="/projects.html"
+                                class="f-footer-link w-inline-block">
+                                <div class="nav-pop white">Munkáink</div>
+                            </a>
+                            <div class="f-footer-vertical-divider"></div><a href="/contact.html"
+                                class="f-footer-link w-inline-block">
+                                <div class="nav-pop white">Kapcsolat</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="/script6.js"
         type="text/javascript"></script>
-    <script
-        src="/script4.js"
+    <script src="/script7.js"
         type="text/javascript"></script>
 </body>
 
