--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             </div>
             <div class="wrapper">
                 <h3 data-w-id="87d6f6cf-8802-a361-a3be-4f973588f3a0" class="heading-4">Megfelelően kiválasztott
-                    stratégia, alaposan átgondolt tartalom, professzionális szakértői tanácsadás és a hatékony
+                    stratégia, alaposan átgondolt tartalom, professzionális szakértői tanácsadás és hatékony
                     letisztult webdesign.</h3>
             </div>
             <div class="wrapper cards">
@@ -389,7 +389,7 @@
                     <div id="w-node-_9d18e437-cdd0-1c65-a0f9-cf0f8f9b9aab-5d511ca9"
                         data-w-id="9d18e437-cdd0-1c65-a0f9-cf0f8f9b9aab" class="card2-first-grid">
                         <div class="card-title black">Mobilbarát felépítés</div>
-                        <p class="card-paragraph-grey">100%-ban okostelefonra optimalizált mobilbarát felépítés.</p>
+                        <p class="card-paragraph-grey">100%-ban okostelefonra optimalizált, mobilbarát felépítés.</p>
                     </div>
                     <div id="w-node-_7799b607-6563-9395-8bbe-60b4944b8079-5d511ca9"
                         data-w-id="7799b607-6563-9395-8bbe-60b4944b8079" class="card3">
